# ArkSigning

./: .gitignore  CMakeLists.txt  Dockerfile  INSTALL.sh  Makefile  README.md  archo.cpp  archo.h  bundle.cpp  bundle.h  macho.cpp  macho.h  openssl.cpp  openssl.h  signervip.patch  signing.cpp  signing.h  xmake.lua  zsign.cpp
docs/: API.md  BUILD.md  MODERNIZATION.md  README.md  STRUCTURE.md
include/arksigning/: arksigning.h
include/arksigning/core/: archo.h  bundle.h  macho.h  signing.h
include/arksigning/crypto/: openssl.h  openssl_raii.h
include/arksigning/modern/: callbacks.h  optional.h  types.h  utility.h
include/arksigning/utils/: base64.h  common.h  constants.h  json.h
releases/: README.md  arksigning-v0.6-macos-arm64  arksigning-v0.6-macos-arm64.tar.gz.sha256  arksigning-v0.6.1-macos-arm64  arksigning-v0.6.1-macos-arm64.tar.gz.sha256  install.sh
src/core/: archo.cpp  bundle.cpp  macho.cpp  signing.cpp  zsign.cpp
src/crypto/: openssl.cpp
src/utils/: base64.cpp  common.cpp  json.cpp
tools/: INSTALL.sh  update_includes.sh
